--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </a>
                 <a href="https://www.tiktok.com/@flying_moussakats" class="text-white hover:text-blue-400 transition-colors">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm0 2C6.485 2 2 6.485 2 12s4.485 10 10 10 10-4.485 10-10S17.515 2 12 2zm1.618 3.513c-.085-.015-.17-.024-.256-.024-.593 0-1.11.39-1.326.966-.17.472-.085.992.235 1.41.34.437.818.73 1.34.82-.09.608-.432 1.77-.954 2.92-.556 1.2-.958 2.378-1.036 3.32-.016.2-.02.396-.02 1.492 0 2.21 1.625 3.16 3.018 3.16 1.104 0 1.95-.536 2.05-1.28.1-.73-.245-1.26-.74-1.63-.445-.335-.83-.438-1.22-.38-.28.038-.56.126-.815.26-.255.132-.47.3-.655.5-.18.2-.315.42-.4.65-.09.23-.13.47-.13.72 0 .52.418.94.94.94.415 0 .76-.26.908-.63.07-.17.116-.36.142-.558.026-.197.037-.396.037-.598 0-.96.22-1.92.65-2.812.3-.63.63-1.22.978-1.77.34-.56.66-1.08 1.008-1.56.34-.48.65-1.04.94-1.68.28-.63.51-1.32.66-2.07.15-.75.22-1.53.22-2.34 0-.69-.086-1.34-.258-1.97-.24-.87-.71-1.57-1.4-2.06C16.892 2.983 15.82 2.652 14.896 2.652c-.896 0-1.67.22-2.278.66zm.372 1.612c.162-.058.33-.105.5-.145.244-.06.49-.09.73-.09.52 0 .94.42.94.94 0 .28-.12.53-.33.7-.206.17-.468.27-.75.27-.29 0-.54-.1-.75-.27-.204-.17-.33-.42-.33-.7 0-.52.42-.94.94-.94z"/>
+                        <path d="M12.525 10.36v-2.05h1.762c.07-.468.275-1.258.9-1.916 1.488-1.618 3.32-1.758 3.96-1.785.064 0 .125.006.185.018v2.66c-.1.012-.2.018-.3.018-.895 0-1.428.16-2.006.764-.526.56-.777 1.25-.8 1.932H20v3.42c-2.458-.052-4.008.06-4.996.386-1.19.388-2.164 1.13-2.9 2.22-.72 1.054-1.1 2.3-1.1 3.733V22h-4.2V11.23c-.93.18-2.06.66-3.08 1.776-.79 1.066-1.19 2.22-1.19 3.255V22H2V12.09c0-1.52.4-2.88 1.2-4.05 1-1.39 2.37-2.28 4-2.812A11.026 11.026 0 0112.525 2z"/>
                     </svg>
                 </a>
             </div>
@@ -327,7 +327,6 @@
         </div>
     </div>
 </footer>
-
     <!-- Recipe Modal -->
     <div id="recipe-modal" class="hidden fixed inset-0 bg-black bg-opacity-70 z-50 flex items-center justify-center p-4">
         <div class="bg-gray-800 rounded-2xl shadow-2xl w-full max-w-2xl max-h-[90vh] overflow-y-auto p-8 relative">
