--- a/index.html
+++ b/index.html
@@ -302,7 +302,6 @@
             </div>
         </section>
     </main>
-
     <!-- Footer -->
   <footer class="bg-gray-900">
     <div class="container mx-auto px-6 py-8">
@@ -312,14 +311,18 @@
                 <p class="text-gray-400">Athens, Greece</p>
             </div>
             <div class="flex justify-center space-x-6 mb-4 md:mb-0">
-                <a href="https://www.instagram.com/flyingmoussakats/" class="text-white hover:text-blue-400 transition-colors">
+                <!-- Instagram -->
+                <a href="https://www.instagram.com/flyingmoussakats/" class="text-white hover:text-blue-400 transition-colors" target="_blank" aria-label="Instagram">
                     <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <!-- ICONO INSTAGRAM - no se modifica -->
-                        <path fill-rule="evenodd" d="..." clip-rule="evenodd" />
+                        <path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.012-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.345 2.525c.636-.247 1.363-.416 2.427.465C9.795 2.013 10.148 2 12.315 2zm-1.16 2.32c-1.042.043-1.65.2-2.122.385a3.06 3.06 0 00-1.15.748 3.06 3.06 0 00-.748 1.15c-.185.472-.342 1.08-.385 2.122-.043 1.007-.054 1.35-.054 3.73s.011 2.723.054 3.73c.043 1.042.2 1.65.385 2.122a3.06 3.06 0 00.748 1.15 3.06 3.06 0 001.15.748c.472.185 1.08.342 2.122.385 1.007.043 1.35.054 3.73.054s2.723-.011 3.73-.054c1.042-.043 1.65-.2 2.122-.385a3.06 3.06 0 001.15-.748 3.06 3.06 0 00.748-1.15c.185-.472.342-1.08.385-2.122.043-1.007.054-1.35.054-3.73s-.011-2.723-.054-3.73c-.043-1.042-.2-1.65-.385-2.122a3.06 3.06 0 00-.748-1.15 3.06 3.06 0 00-1.15-.748c-.472-.185-1.08-.342-2.122-.385-1.007-.043-1.35-.054-3.73-.054s-2.723.011-3.73.054zm2.88 1.624a4.348 4.348 0 100 8.696 4.348 4.348 0 000-8.696zM12 15.15a3.15 3.15 0 110-6.3 3.15 3.15 0 010 6.3zm3.438-7.908a1.031 1.031 0 11-2.062 0 1.031 1.031 0 012.062 0z" clip-rule="evenodd"/>
                     </svg>
                 </a>
+
+                <!-- TikTok -->
                 <a href="https://www.tiktok.com/@flying_moussakats" class="text-white hover:text-blue-400 transition-colors" target="_blank" aria-label="TikTok">
-                    <i class="fab fa-tiktok text-2xl"></i>
+                    <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M41 14.56c-4.06 0-7.37-3.1-7.79-7.06h-5.26v25.2c0 2.88-2.33 5.21-5.21 5.21s-5.21-2.33-5.21-5.21c0-2.88 2.33-5.21 5.21-5.21.4 0 .79.05 1.17.14v-5.3a10.49 10.49 0 00-1.17-.06c-5.76 0-10.43 4.67-10.43 10.43 0 5.76 4.67 10.43 10.43 10.43s10.43-4.67 10.43-10.43v-13.1c2.26 1.67 5.06 2.66 8.11 2.66v-5.26z"/>
+                    </svg>
                 </a>
             </div>
             <div class="text-sm text-gray-500">
