--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     Whether you're a seasoned veteran or have never touched a disc, we're always looking for new members with a positive attitude and a passion for sport. Come to one of our open practices!
                 </p>
                 <div class="mt-8 flex justify-center flex-wrap gap-4">
-                    <a href="mailto:contact@flyingmoussakats.gr?subject=Interested%20in%20Joining" 
+                    <a href="mailto:flyingmoussakats@gmail.com?subject=Interested%20in%20Joining" 
                        class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-lg shadow-xl transition-transform transform hover:scale-105 text-lg inline-block">
                         Contact Us & Join
                     </a>
