--- a/index.html
+++ b/index.html
@@ -284,20 +284,15 @@
 
         <!-- Join Us Section -->
         <section id="join" class="py-20 fade-in-section">
-            <div class="container mx-auto px-6 text-center">
-                <h2 class="text-4xl font-bold text-white">Ready to Fly?</h2>
-                <p class="mt-4 text-lg max-w-2xl mx-auto text-gray-300">
-                    Whether you're a seasoned veteran or have never touched a disc, we're always looking for new members with a positive attitude and a passion for sport. Come to one of our open practices!
-                </p>
-                <div class="mt-8 flex justify-center flex-wrap gap-4">
+            <div class="mt-8 flex justify-center flex-wrap gap-4">
     <div class="flex flex-col items-center">
         <form id="contact-form" class="mb-2 w-full max-w-xs">
-            <label for="email-subject" class="sr-only">Selecciona el asunto:</label>
+            <label for="email-subject" class="sr-only">Select subject:</label>
             <select id="email-subject" name="subject" class="block w-full py-2 px-4 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm text-gray-800 bg-white">
-                <option value="Interested in Joining the Team">Interesado en unirse al equipo</option>
-                <option value="General Inquiry">Consulta general</option>
-                <option value="Sponsorship Opportunities">Oportunidades de patrocinio</option>
-                <option value="Website Feedback">Comentarios sobre la web</option>
+                <option value="Interested in Joining the Team">Interested in Joining the Team</option>
+                <option value="General Inquiry">General Inquiry</option>
+                <option value="Sponsorship Opportunities">Sponsorship Opportunities</option>
+                <option value="Website Feedback">Website Feedback</option>
             </select>
         </form>
 
@@ -313,7 +308,7 @@
 <p class="mt-4 text-sm text-gray-400">Drop us an email, or generate a recipe while you think about it!</p>
 
 <script>
-    // Script para manejar el botón de contacto con selección de asunto
+    // Script to handle the contact button with subject selection
     document.getElementById('contact-button').addEventListener('click', function() {
         const email = 'flyingmoussakats@gmail.com';
         const subjectSelect = document.getElementById('email-subject');
