--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         Get a Post-Game Moussaka Recipe
     </button>
 </div>
-<p class="mt-4 text-sm text-gray-400">Drop us an email, or generate a recipe while you think about it!</p><p class="mt-4 text-sm text-gray-400 text-center">Drop us an email, or generate a recipe while you think about it!</p>
+<p class="mt-4 text-sm text-gray-400 text-center">Drop us an email, or generate a recipe while you think about it!</p>
 
 <script>
     // Script to handle the contact button with subject selection
